--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.7896becefac073bbe3c3.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.86e37656563d37b0ac16.js" type="module"></script><script src="polyfills-es2015.e8b97d86f82c10919d39.js" type="module"></script><script src="runtime-es5.c658756b0042cf49cc53.js" nomodule defer></script><script src="polyfills-es5.2bf9de9ff54c88b12f6b.js" nomodule defer></script><script src="main-es2015.71e66471bff44de8fdcc.js" type="module"></script><script src="main-es5.428600ca87fcdd267d1a.js" nomodule defer></script></body>
 </html>
